# photo_sorter

./: ._copy_file.py  ._main.py  ._read_dir.py  ._requirement.txt  ._settings.json  README.md  copy_file.py  main.py  pyproject.toml  read_dir.py  requirement.txt  settings.json
src/photo_sorter/: __main__.py  copy_file.py  main.py  requirement.txt.old  settings.json
