[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo_sorter"
version = "0.1.0"
authors = [
  { name="makiwara-fr", email="" },
]
description = "A quick photo & video sorting solution"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pillow",
  "hachoir"
]

[project.scripts]
photo_sorter = "photo_sorter.main:script"




[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
